2003-02-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m (ihandler): Fix for mingw, which doesn't have kill()

2003-02-02 22:00  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-initWithFontName:matrix:screenFont:): Use
	better guess for x-height value.

	* Source/x11/XGServerWindow.m: Use safer order of includes.

	* Source/xlib/GSXftFontInfo.m (-widthOfGlyphs:lenght:,
	-drawGlyphs:lenght:onDisplay:drawable:with:at:): Convert glyph
	buffers to 16-bit buffers that the Xft functions can handle.

	* Source/xlib/XGFont.m: Whitespace cleanups.

2003-01-31  Chris B. Vetter <chrisv@web4inc.com>

	* Tools/gpbs.m (-dealloc): Remove observer.
	(ihandler): Reset all signals and try to reraise original signal.
	(init): Set NSIG signals.
	(main): release server before exiting.

2003-02-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	Added glyph methods needed for new text system.
	
2003-01-31  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m
	Implemented [movewindow::] and [restrictWindow:toImage:].
	* Source/x11/XGBitmapImageRep.m
	Removed the xPixmap methods.
	* Source/x11/XGSlideView.m
	Use new display server methods to implement without X calls. This
	class can now be moved to frontend.
	* Source/x11/XGDragView.m
	Use new display server methods.
	
2003-01-31 22:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-_generateGlyphsForRun:at:): Implement
	handling of text attachments.

2003-01-27 18:10  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Clean up includes.
	(-initWithFontName:matrix:screenFont:):	Use absolute values of the
	matrix entries when checking if a screen font entry should be used.

2003-01-26 21:24  Alexander Malmberg <alexander@malmberg.org>

	* Source/xlib/GSXftFontInfo.m: Update with screen font changes in
	backend/gui interface.

2003-01-26 20:07  Alexander Malmberg <alexander@malmberg.org>
